--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "lunch",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "NODE_ENV=production webpack -d -p"
   },
   "repository": {
     "type": "git",
@@ -15,5 +16,18 @@
   "bugs": {
     "url": "https://github.com/CondeNast/lunch/issues"
   },
-  "homepage": "https://github.com/CondeNast/lunch#readme"
+  "homepage": "https://github.com/CondeNast/lunch#readme",
+  "dependencies": {
+    "@types/hapi": "~16.1.9",
+    "@types/lodash": "^4.14.36",
+    "lodash": "~4.12.0",
+    "hapi": "~16.5.2",
+    "react": "~15.6.1",
+    "webpack": "~3.5.5"
+  },
+  "devDependencies": {
+    "awesome-typescript-loader": "^3.2.3",
+    "source-map-loader": "^0.2.1",
+    "typescript": "^2.5.2"
+  }
 }
